--- a/async-mwmr/Cargo.toml
+++ b/async-mwmr/Cargo.toml
@@ -5,20 +5,32 @@ edition.workspace = true
 repository.workspace = true
 homepage.workspace = true
 license.workspace = true
-description = "A placeholder"
+description = "A runtime agnostic, WASM/WASI friendly, multi-writer-multi-reader MVCC, ACID, Serializable Snapshot Isolation transaction manager for database development."
+
+[features]
+default = []
+
+# Features will export the generic unit tests implementation for database based on mwmr
+test = ["rand"]
 
 [dependencies]
-bytes.workspace = true
-bitflags.workspace = true
+async-channel.workspace = true
 cheap-clone.workspace = true
-async-channel = "2"
 crossbeam-utils.workspace = true
 either.workspace = true
 indexmap.workspace = true
 parking_lot.workspace = true
-scopeguard = "1"
+scopeguard.workspace = true
 smallvec-wrapper.workspace = true
-once_cell = "1"
 thiserror.workspace = true
-tracing.workspace = true
-wg = "0.7"
+wmark = { workspace = true, features = ["future", "default"] }
+
+rand = { workspace = true, optional = true }
+
+[dev-dependencies]
+rand.workspace = true
+
+[[test]]
+name = "async-mwmr"
+path = "tests/main.rs"
+required-features = ["test"]
