--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,24 +53,9 @@ jobs:
     - name: Apply clippy lints
       run: cargo clippy --all-features
 
-  # This represents the minimum Rust version supported by
-  # Bytes. Updating this should be done in a dedicated PR.
-  #
-  # Tests are not run as tests may require newer versions of
-  # rust.
-  minrust:
-    name: minrust
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Install Rust
-        run: rustup update 1.72.0 && rustup default 1.72.0
-      - name: Check
-        run: . ci/test-stable.sh check
-
   # Stable
-  stable:
-    name: stable
+  test:
+    name: test
     strategy:
       matrix:
         os:
@@ -84,118 +69,7 @@ jobs:
         # --no-self-update is necessary because the windows environment cannot self-update rustup.exe.
         run: rustup update stable --no-self-update && rustup default stable
       - name: Test
-        run: . ci/test-stable.sh test
-
-  # Nightly
-  nightly:
-    name: nightly
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Install Rust
-        run: rustup update $nightly && rustup default $nightly
-      - name: Test
-        run: . ci/test-stable.sh test
-
-  # Run tests on some extra platforms
-  cross:
-    name: cross
-    strategy:
-      matrix:
-        target:
-          - aarch64-unknown-linux-gnu
-          - aarch64-linux-android
-          - aarch64-unknown-linux-musl
-          - i686-linux-android
-          - x86_64-linux-android
-          - i686-pc-windows-gnu
-          - x86_64-pc-windows-gnu
-          - i686-unknown-linux-gnu
-          - powerpc64-unknown-linux-gnu
-          # - mips64-unknown-linux-gnuabi64
-          - riscv64gc-unknown-linux-gnu
-          - wasm32-unknown-unknown
-          - wasm32-unknown-emscripten
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Install Rust
-        run: rustup update stable && rustup default stable
-      - name: cross build --target ${{ matrix.target }}
-        run: |
-          cargo install cross
-          cross build --target ${{ matrix.target }}
-        if: matrix.target != 'wasm32-unknown-unknown'
-      # WASM support
-      - name: cargo build --target ${{ matrix.target }}
-        run: |
-          rustup target add ${{ matrix.target }}
-          cargo build --features js --target ${{ matrix.target }}
-        if: matrix.target == 'wasm32-unknown-unknown'
-      # - name: cargo build --target ${{ matrix.target }}
-      #   run: |
-      #     rustup target add ${{ matrix.target }}
-      #     cargo +nightly build --no-default-features --features alloc --target ${{ matrix.target }} -Z build-std=core,alloc
-      #   if: matrix.target == 'mips64-unknown-linux-gnuabi64'
-
-  # Sanitizers
-  sanitizer:
-    name: sanitizer
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Install Rust
-        run: rustup update $nightly && rustup default $nightly
-      - name: Install rust-src
-        run: rustup component add rust-src
-      - name: ASAN / LSAN / TSAN
-        run: . ci/sanitizer.sh
-
-  # valgrind
-  valgrind:
-    name: valgrind
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Install Rust ${{ env.stable }}
-        uses: actions-rs/toolchain@v1
-        with:
-            toolchain: ${{ env.stable }}
-            override: true
-      - uses: Swatinem/rust-cache@v2
-
-      - name: Install Valgrind
-        run: |
-          sudo apt-get update -y
-          sudo apt-get install -y valgrind
-      # Compile tests
-      - name: cargo build
-        run: cargo build --bin integration
-        working-directory: integration
-
-      # Run with valgrind
-      - name: Run valgrind 
-        run: valgrind --error-exitcode=1 --leak-check=full --show-leak-kinds=all ./target/debug/integration
-        working-directory: integration
- 
-  miri:
-    name: miri
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Miri
-        run: ci/miri.sh
-
-  # Loom
-  # loom:
-  #   name: loom
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - name: Install Rust
-  #       run: rustup update $nightly && rustup default $nightly
-  #     - name: Loom tests
-  #       run: RUSTFLAGS="--cfg loom -Dwarnings" cargo test --test loom
+        run: cargo test --all-features
 
   coverage:
     name: cargo tarpaulin
@@ -203,12 +77,7 @@ jobs:
     needs: 
       - rustfmt
       - clippy
-      - stable
-      - nightly
-      - sanitizer
-      - valgrind
-      - miri
-      - minrust
+      - test
     steps:
       - uses: actions/checkout@v3
       - name: Install latest nightly
