--- a/wmark/Cargo.toml
+++ b/wmark/Cargo.toml
@@ -36,7 +36,7 @@ futures-util = { version = "=0.3.29", optional = true, default-features = false,
 
 tracing = { version = "0.1", optional = true, default-features = false }
 
-tokio = { version = "1", optional = true, default-features = false, features = ["rt"] }
+tokio = { version = "1", optional = true, default-features = false, features = ["rt", "sync"] }
 smol = { version = "2", optional = true }
 async-std = { version = "1", optional = true }
 
