--- a/tokio-mwmr/Cargo.toml
+++ b/tokio-mwmr/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "mwmr"
+name = "tokio-mwmr"
 version.workspace = true
 edition.workspace = true
 repository.workspace = true
 homepage.workspace = true
 license.workspace = true
-description = "A multi-writer-multi-reader MVCC, ACID, Serializable Snapshot Isolation transaction manager for database development."
+description = "A WASM/WASI friendly, multi-writer-multi-reader MVCC, ACID, Serializable Snapshot Isolation transaction manager for database development based on tokio."
 
 [features]
 default = []
@@ -15,23 +15,25 @@ test = ["rand"]
 
 [dependencies]
 cheap-clone.workspace = true
-crossbeam-channel.workspace = true
 crossbeam-utils.workspace = true
 either.workspace = true
-indexmap = { workspace = true, features = ["default"] }
-parking_lot.workspace = true
+indexmap.workspace = true
+pollster = "0.3"
 scopeguard = { workspace = true, features = ["use_std"] }
 smallvec-wrapper.workspace = true
 thiserror.workspace = true
-wmark = { workspace = true, features = ["default"] }
+wmark = { workspace = true, features = ["tokio", "default"] }
 mwmr-core.workspace = true
 
 rand = { workspace = true, optional = true }
+tokio = { version = "1", default-features = false, features = ["rt", "sync"] }
+futures = { version = "=0.3.29" }
 
 [dev-dependencies]
 rand.workspace = true
+tokio = { version = "1", features = ["full"] }
 
 [[test]]
-name = "mwmr"
+name = "tokio-mwmr"
 path = "tests/main.rs"
 required-features = ["test"]
