--- a/.github/workflows/loc.yml
+++ b/.github/workflows/loc.yml
@@ -26,7 +26,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        crates: [mwmr, async-mwmr, wmark, mwmr-core]
+        crates: [mwmr, async-mwmr, wmark, mwmr-core, skipdb]
     steps:
       - uses: actions/checkout@v3
 
@@ -43,24 +43,6 @@ jobs:
       - name: Count lines of code
         run: |
           tokeit
-
-      - name: Upload loc to GitHub Gist
-        uses: actions/github-script@v6
-        with:
-          github-token: ${{secrets.GIST_PAT}}
-          script: |
-            const fs = require('fs');
-            const output = fs.readFileSync('tokeit.json', 'utf8');
-            const gistId = '327b2a8aef9003246e45c6e47fe63937';
-            await github.rest.gists.update({
-              gist_id: gistId,
-              files: {
-                "txn": {
-                  content: output
-                }
-              }
-            });
-            console.log("Gist updated");
       
       - name: Count lines of code in subcrates
         run: |
