--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,8 @@ resolver = "2"
 version = "0.2.0"
 edition = "2021"
 rust-version = "1.75.0"
-repository = "https://github.com/al8n/txn"
-homepage = "https://github.com/al8n/txn"
+repository = "https://github.com/al8n/skipdb"
+homepage = "https://github.com/al8n/skipdb"
 categories = ["asynchronous", "data-structures", "concurrency", "database-implementations", "development-tools"]
 keywords = ["ssi", "transaction", "database", "optimistic", "mvcc"]
 license = "MIT OR Apache-2.0"
