--- a/async-skipdb/Cargo.toml
+++ b/async-skipdb/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "skipdb"
+name = "async-skipdb"
 version = "0.0.0"
 rust-version.workspace = true
 edition.workspace = true
@@ -12,18 +12,27 @@ license.workspace = true
 [features]
 default = []
 
+tokio = ["async-mwmr/tokio"]
+smol = ["async-mwmr/smol"]
+async-std = ["async-mwmr/async-std"]
+
 [dependencies]
 cheap-clone = "0.1"
 crossbeam-skiplist = "0.1"
 either = "1"
-mwmr = { version = "0.2", path = "../mwmr" }
+async-mwmr = { version = "0.2", path = "../async-mwmr" }
+scopeguard.workspace = true
 skipdb-core = { path = "../skipdb-core" }
 
 [dev-dependencies]
+futures = "0.3"
 rand = "0.8"
 scopeguard = "1"
 crossbeam-channel = "0.5"
-wmark = "0.1"
+wmark = { version = "0.1", features = ["future"] }
+tokio = { version = "1", features = ["full"] }
+async-std = { version = "1", features = ["attributes"] }
+smol = "2"
 
 [package.metadata.docs.rs]
 all-features = true
