--- a/wmark/Cargo.toml
+++ b/wmark/Cargo.toml
@@ -22,6 +22,7 @@ all-features = true
 rustdoc-args = ["--cfg", "docsrs"]
 
 [dependencies]
+atomic_refcell = "0.1"
 smallvec-wrapper.workspace = true
 crossbeam-utils = { workspace = true, default-features = false }
 scopeguard.workspace = true
