Relax trait bounds and cleanup

--- a/mwmr-core/Cargo.toml
+++ b/mwmr-core/Cargo.toml
@@ -16,6 +16,7 @@ cheap-clone.workspace = true
 either.workspace = true
 indexmap.workspace = true
 smallvec-wrapper.workspace = true
+thiserror.workspace = true
 
 [package.metadata.docs.rs]
 all-features = true
