Cleanup `Cargo.toml`s

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,7 +37,9 @@ tracing = "0.1"
 wmark = { path = "wmark", version = "0.1", default-features = false }
 txn-core = { path = "txn-core", version = "0.1", default-features = false }
 txn = { path = "txn", version = "0.1", default-features = false }
-async-txn = { path = "async-txn", version = "0.1", default-features = false }
+async-txn = { path = "async-txn", version = "0.1" }
+skipdb-core = { path = "skipdb-core", version = "0.1" }
+
 
 [workspace.metadata.docs.rs]
 all-features = true
