--- a/skipdb/Cargo.toml
+++ b/skipdb/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "skipdb"
-version = "0.0.0"
+version.workspace = true
 rust-version.workspace = true
 edition.workspace = true
 repository.workspace = true
@@ -17,7 +17,7 @@ cheap-clone = "0.1"
 crossbeam-skiplist = "0.1"
 either = "1"
 txn = { workspace = true, features = ["default"] }
-skipdb-core = { path = "../skipdb-core" }
+skipdb-core.workspace = true
 
 [dev-dependencies]
 rand = "0.8"
