--- a/wmark/Cargo.toml
+++ b/wmark/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wmark"
-version.workspace = true
+version = "0.1.1"
 edition.workspace = true
 repository.workspace = true
 homepage.workspace = true
