--- a/async-txn/Cargo.toml
+++ b/async-txn/Cargo.toml
@@ -28,7 +28,7 @@ scopeguard = { workspace = true, features = ["use_std"] }
 smallvec-wrapper.workspace = true
 thiserror.workspace = true
 wmark = { workspace = true, features = ["future", "default"] }
-txn-core.workspace = true
+txn-core = { workspace = true, features = ["default"] }
 
 rand = { workspace = true, optional = true }
 futures = "0.3"
