--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ members = [
 resolver = "2"
 
 [workspace.package]
-version = "0.1.1"
+version = "0.1.2"
 edition = "2021"
 rust-version = "1.75.0"
 repository = "https://github.com/al8n/skipdb"
@@ -38,7 +38,7 @@ wmark = { path = "wmark", version = "0.1", default-features = false }
 txn-core = { path = "txn-core", version = "0.1", default-features = false }
 txn = { path = "txn", version = "0.1", default-features = false }
 async-txn = { path = "async-txn", version = "0.1", default-features = false }
-skipdb-core = { path = "skipdb-core", version = "0.1" }
+skipdb-core = { path = "skipdb-core", version = "0.1", default-features = false }
 
 
 [workspace.metadata.docs.rs]
