--- a/skipdb-core/Cargo.toml
+++ b/skipdb-core/Cargo.toml
@@ -10,8 +10,12 @@ keywords.workspace = true
 license.workspace = true
 description = "The core for `skipdb` and `async-skipdb` crates"
 
+[features]
+default = ["std"]
+std = ["smallvec-wrapper/std", "crossbeam-skiplist/default", "txn-core/std", "either/default"]
+
 [dependencies]
-crossbeam-skiplist = "0.1"
-either = "1"
-txn-core.workspace = true
+crossbeam-skiplist = { version = "0.1", default-features = false }
+either = { workspace = true, default-features = false }
+txn-core = { workspace = true, default-features = false, features = ["alloc"] }
 smallvec-wrapper.workspace = true
