--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -102,7 +102,7 @@ jobs:
         run: cargo install cargo-tarpaulin
       - name: Run Coverage and Generate Report
         run: |
-          cargo tarpaulin --all-features --out xml
+          cargo tarpaulin --all-features --out xml --no-fail-fast
         continue-on-error: true
       - name: Upload to codecov.io
         uses: codecov/codecov-action@v3.1.1
