--- a/skipdb/Cargo.toml
+++ b/skipdb/Cargo.toml
@@ -13,7 +13,7 @@ license.workspace = true
 default = []
 
 [dependencies]
-cheap-clone = "0.1"
+cheap-clone = { workspace = true, features = ["std"] }
 txn = { workspace = true, features = ["default"] }
 skipdb-core = { workspace = true, features = ["default"] }
 
