--- a/wmark/Cargo.toml
+++ b/wmark/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wmark"
-version = "0.1.1"
+version.workspace = true
 edition.workspace = true
 repository.workspace = true
 homepage.workspace = true
