--- a/skipdb-core/Cargo.toml
+++ b/skipdb-core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "skipdb-core"
-version.workspace = true
+version = "0.2.0"
 edition.workspace = true
 rust-version.workspace = true
 repository.workspace = true
